[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/StompArea.gd" type="Script" id=3]
[ext_resource path="res://Scenes/PlayerCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HealthIndicator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/slash.png" type="Texture" id=6]
[ext_resource path="res://Assets/enemy_kill.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 1 )

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "slash"
length = 0.19
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 9.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 8, 15 )
collision_mask = 452
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.5 )
shape = SubResource( 1 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StompArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2( 0, 2 )
shape = SubResource( 7 )

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
anims/flash = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="PlayerCamera" parent="." instance=ExtResource( 4 )]
current = true
editor_draw_screen = false

[node name="HealthIndicator" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MeleeWeapon")
anims/RESET = SubResource( 8 )
anims/slash = SubResource( 9 )

[node name="MeleeWeapon" type="Area2D" parent="."]
position = Vector2( 17, -6 )
collision_layer = 512
collision_mask = 0

[node name="Sprite" type="Sprite" parent="MeleeWeapon"]
texture = ExtResource( 6 )
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeWeapon"]
shape = SubResource( 10 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="RightAttackPosition" type="Position2D" parent="."]
position = Vector2( 17, -6 )

[node name="LeftAttackPosition" type="Position2D" parent="."]
position = Vector2( -17, -6 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
[connection signal="stomped" from="StompArea" to="." method="_on_StompArea_stomped"]
[connection signal="area_entered" from="MeleeWeapon" to="." method="_on_MeleeWeapon_area_entered"]
